[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
rayon = "1.5.0"
stackvec = "0.2.1"
hex = "0.4.2"
regex = "1.4.2"
pathfinding = "2.0.4"
itertools = "0.9.0"
array2d = "0.2.1"

[profile.release]
opt-level=3
debug=false
debug-assertions=false
overflow-checks=false
lto=true
panic="abort"
incremental=false
codegen-units=1
rpath=false